<resources>
    <string name="app_name">IntecConnect</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Acceder</string>
    <string name="microsoft">Microsoft</string>
    <string name="adasdasdd">123456789</string>
    <string name="introduzca_su_contrase_a">Introduzca su contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="matricula">Matricula</string>
    <string name="introduzca_su_matricula">Introduzca su matricula</string>
    <string name="o">O</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="_1114226">1114220</string>
    <string name="title_activity_home_activitys">Home_Activitys</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Likes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="inicio">Inicio</string>
    <string name="me_gusta">Favoritos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="perfil">Perfil</string>
    <string name="accessing">Accediendo…</string>
    <string name="pls_wait">Por favor espera</string>
    <string name="viewing_application">Consultando tu solicitud</string>
    <string name="por_favor_espera">Por favor espera</string>
    <string name="logo">logo</string>
    <string name="accediendo">Accediendo…</string>
    <string name="invalid_credentials">El usuario o contraseña son incorrectos</string>
    <string name="failed_email">Este correo no encuentra registrado</string>
    <string name="close">Cerrar</string>
    <string name="service_unavailable">En estos momentos no se puede acceder al servicio. Inténtelo más tarde.</string>
    <string name="no_internet_message">Para acceder debes tener activa la opción de datos y tener señal de la red o estar conectado vía Wi-Fi</string>
    <string name="product_name">Lapiz</string>
    <string name="best_seller">Mas vendido</string>
    <string name="product_price">RD$</string>
    <string name="buscar_productos">Buscar productos</string>
    <string name="articulos_populares">Articulos populares</string>
    <string name="category_name">category name</string>
    <string name="categories">Categorias de productos</string>
    <string name="_100_00">100.00</string>
    <string name="presentation_money">RD$ 100.00</string>
    <string name="like">like</string>
    <string name="esta_categoria_no_tiene_productos_por_el_momento">Categria sin productos.</string>
    <string name="no_se_encontraron_productos_para_la_b_squeda">No se encontro ningun producto para la búsqueda: %1$s</string>
    <string name="no_tienes_productos_como_favoritos">No tienes productos como favoritos.</string>
    <string name="productos_favoritos">Productos Favoritos</string>

    <string name="notificacion">Notificacion</string>
    <string name="configuration">Configuraciones</string>
    <string name="faqs">Faqs</string>
    <string name="logout">Salir</string>
    <string name="button_back">button_back</string>
    <string name="name_product">Name Product</string>
    <string name="las_laptops_mac_o_macbooks_son_computadoras_port_tiles_dise_adas_por_apple_son_conocidas_por_su_dise_o_elegante_sistema_operativo_macos_rendimiento_fluido_y_enfoque_en_la_simplicidad">Las laptops Mac, o MacBooks, son computadoras portátiles diseñadas por Apple. Son conocidas por su diseño elegante, sistema operativo macOS, rendimiento fluido y enfoque en la simplicidad.</string>
    <string name="laptop_mac">Laptop Mac</string>
    <string name="descriocion_del_producto">Descripcion</string>
    <string name="brand_product">brand product</string>
    <string name="characteristics">Caracteristicas</string>
    <string name="dimenciones">Dimenciones:</string>
    <string name="size">Tamaño:</string>
    <string name="dec">dec</string>
    <string name="detalle_de_producto">Detalle de producto</string>
    <string name="default_notification_channel_id">0</string>
    <string name="listado_de_productos">Catalogo de productos</string>
    <string name="el_producto_que_busca_no_se_encuentra_en_inventario">El producto no se encuentra en inventario</string>
    <string name="_10">10</string>
    <string name="eliminar_notici_n">Eliminar Notición</string>
    <string name="ir_a_pagos">Ir a pagos</string>
    <string name="Email">Correo electrónico</string>
    <string name="Forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="Reset_password">Restablecer contraseña</string>
    <string name="Back_to_log_in">Volver a iniciar sesión</string>
    <string name="No_worries">No te preocupes, te enviaremos las instrucciones para restablecerla.</string>
    <string name="Enter_your_email">Ingrese su correo electrónico</string>
    <string name="Sent_email">Enviar correo</string>
    <string name="Password">Contraseña</string>
    <string name="Confirm_password">Confirmar contraseña</string>
    <string name="set_new_password">Establecer nueva contraseña</string>
    <string name="enter_new_password">Ingrese nueva contraseña</string>
    <string name="must_be_at_least_8_characters">Debe tener al menos 8 caracteres</string>"

</resources>