<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.activities.ResetPassword">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:contentDescription="@string/button_back"
        android:padding="10dp"
        android:src="@drawable/back_arrow_left_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Icono de huella digital -->
    <ImageView
        android:id="@+id/fingerprintIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_passwprd"
        android:contentDescription="@string/Reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

    <!-- Título: Forgot password? -->
    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fingerprintIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Descripción: No worries, we’ll send you reset instructions -->
    <TextView
        android:id="@+id/forgotPasswordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/must_be_at_least_8_characters"
        android:textColor="@color/text_description"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label: Email -->
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo de texto: Email input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1.0"
        android:layout_marginTop="8dp" />
    <!-- Label: Email -->
    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_password"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Campo de texto: Email input -->
    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1.0"
        android:layout_marginTop="8dp" />
    <!-- Botón: Reset Password -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/Reset_password"
        android:textColor="?android:attr/textAppearanceButton"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

    <!-- Enlace: Back to log in -->
    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back_to_log_in"
        android:textColor="#888888"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>