<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toStartOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="207dp"
            android:background="@drawable/rounded_background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="213dp"
            android:background="@drawable/rounded_button_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/bienvenido"
                android:textColor="?android:attr/textColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vat_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/matricula"
                android:textColor="?android:attr/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/vat_idEditText"
                app:layout_constraintStart_toStartOf="@+id/vat_idEditText"
                app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

            <EditText
                android:id="@+id/vat_idEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/introduzca_su_matricula"
                android:inputType="number"
                android:maxLength="7"
                android:padding="16dp"
                android:text="@string/_1114226"
                android:textColor="?android:attr/editTextColor"
                android:textColorHint="?android:attr/textColorHint"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vat_id"
                tools:ignore="Autofill" />


            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/contrase_a"
                android:textColor="?android:attr/textColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/vat_idEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/introduzca_su_contrase_a"
                android:inputType="textPassword"
                android:padding="16dp"
                android:text="@string/adasdasdd"
                android:textColor="?android:attr/editTextColor"
                android:textColorHint="?android:attr/textColorHint"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/olvidaste_tu_contrase_a"
                android:textColor="?android:attr/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="?attr/colorPrimary"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/iniciar_sesi_n"
                    android:textColor="?android:attr/textAppearanceButton"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/or_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/start_line"
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:background="@color/ligth_gray" />

                    <TextView
                        android:id="@+id/orTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/o"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/end_line"
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:background="@color/ligth_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/outlookButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/microsoft"
                        android:textColor="?android:attr/textColor"
                        android:textSize="12sp"
                        app:icon="@drawable/ic_microsoft"
                        app:iconGravity="textStart"
                        app:iconTint="@null" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>