<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_card_view_item_adapter">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            app:lottie_rawRes="@raw/like" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/like"
        android:scaleType="centerInside"
        android:src="@drawable/favorite_24dp_fill_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/product_image"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image_holder"
        app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
        app:layout_constraintBottom_toTopOf="@id/product_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_button" />

    <TextView
        android:id="@+id/product_name_text"
        style="@style/Product.Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="?android:attr/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/product_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image" />

    <TextView
        android:id="@+id/product_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="@color/text_description"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/product_price_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_description_text">

        <TextView
            android:id="@+id/symbol_money"
            style="@style/Product.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/product_price"
            android:textColor="?android:attr/textColor"
            android:textSize="9sp"
            app:layout_constraintEnd_toStartOf="@id/product_price_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_price_text"
            style="@style/Product.Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/_100_00"
            android:textColor="?android:attr/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/symbol_money"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
